--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 <section class="landing">
 	<div class="landing-inner">
-		<img src="img/logo.png" alt="">
-		<p>Buy all the goods you love at a <span class="discount">discount</span>!</p>
+		<img src="img/logo.png">
+		<p>Buy all christmas items at a <span class="discount">discount</span>!</p>
 		<h1 class="comingsoon">Coming Soon</h1>
 		<div class="countdown"></div>
 	</div>
